--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "typescript-express-tutorial",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node ./src/server.ts"
@@ -12,6 +12,8 @@
   "dependencies": {
     "@types/express": "^4.16.1",
     "body-parser": "^1.19.0",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.9.1",
     "dotenv": "^8.0.0",
     "envalid": "^5.0.0",
     "express": "^4.17.1",
